# minimal

./: Copyright.txt  LICENSE.txt  README.md  README.rst
autotools/: .gitignore  Makefile.am  README.md  configure.ac  shell.nix
boost_program_options/: CMakeLists.txt  README.rst  program.cpp
boost_python/: CMakeLists.txt  hello.cpp  hello.hpp  test_hello.py
haskell_gloss/: .gitignore  Main.hs  README.md  default.nix  package.yaml
haskell_quickcheck/: README.md  qc.hs  shell.nix
latex-beamer/: CMakeLists.txt  beamer.tex
nix-stack/: README.md  default.nix
nix_bun/: .gitignore  Makefile  README.md  bun.lockb  flake.nix  hello.ts  package.json
nix_cabal/: CHANGELOG.md  README.md  default.nix  flake.nix  hello-cabal.cabal
nix_cabal/src/: Lib.hs  Main.hs
nix_docker/: flake.nix  run.sh
nix_go/: flake.nix
nix_go/nix/: default.nix  shell.nix
nix_pyapp/: .gitignore  README.md  default.nix  myapp.py
nix_python_app/: setup.py
nix_stack/: stack.yaml
opencv_python/: v2cam_capture.py
pandoc_slide/: .gitignore  README.md  build.sh  shell.nix
pandoc_slide/in/: 1.md
qt_python/: minimal_pyqt.py
swig_python/: CMakeLists.txt  hello.cpp  hello.hpp  hello.i  test_hello.py
