cabal-version:       >=1.10
name:                hello-cabal
version:             0.1.0.0
license-file:        LICENSE
author:              wisut hantanong
maintainer:          wizzup@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:       base >=4.12 && <4.13
  default-language:    Haskell2010
