cabal-version:       2.4
name:                hello
version:             0.1.0.0
author:              wisut hantanong
maintainer:          wizzup@gmail.com
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:    src
  exposed-modules:   Lib
  build-depends:     base
  default-language:  Haskell2010

executable           hello
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base
                   , hello
  default-language:  Haskell2010
