cabal-version:       3.8
name:                hello
version:             0.1.0.0

library
  hs-source-dirs:    src
  exposed-modules:   Lib
  build-depends:     base
  default-language:  Haskell2010

executable           hello
  ghc-options:       -Wall
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base
                   , hello
  other-modules:     Lib
  default-language:  Haskell2010
